--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %} {% block content %}
-<h2>About</h2>
+
+{% for number in list_of_numbers %}
+<p>{{ number }}</p>
+{% endfor %}
+<h2>{{ page_title }}</h2>
 <p>
 	The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
 	recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain when
@@ -9,40 +13,22 @@
 	action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had planned to
 	leave on other business, welcomed a fourteenth to fill into their party.
 </p>
+
+{% for member in company %}
+
+
 <div class="row featurette">
 	<div class="col-md-7">
-		<h3>Thorin Oakenshield</h3>
+		<h3>{{ member.name }}</h3>
 		<p>
-			Thorin II, also called the Oakenshield, King under the Mountain or the Mountain King,[1] was the son of
-			Thráin
-			II, the older brother of Frerin and Dís, the grandson of King Thrór and the uncle of Fíli and Kíli. Thorin
-			was
-			best known for his deeds as leader of a company that infiltrated the lost Kingdom under the Mountain to take
-			it
-			back from Smaug and for leading an alliance of Men, Dwarves, and Elves in the Battle of the Five Armies.
+			{{ member.description }}
 		</p>
 	</div>
 	<div class="col-md-5">
-		<img src="https://upload.wikimedia.org/wikipedia/en/e/ed/Thorin%2C_from_the_Hobbit.jpg" alt="Thorin Oakenshield">
+		<img class="featurette-image img-responsive" src="{{ member.image_source }}" alt="Thorin Oakenshield">
     </div>
-	</div>
-	<div class="row featurette">
-		<div class="col-md-5">
-			<img src="https://vignette.wikia.nocookie.net/lotr/images/b/b4/The-Hobbit-Fili-and-Kili.jpg/revision/latest?cb=20110714202952" alt="Fili and Kili">
-    </div>
-			<div class="col-md-7">
-				<h3>Fili and Kili</h3>
-				<p>
-					Fíli and Kíli were brothers, the youngest of the thirteen dwarves who set out on Thorin
-					Oakenshield's quest along with Gandalf and Bilbo Baggins to reclaim the Lonely Mountain for the
-					Dwarves.
+</div>
+<hr class="featurette-divider">
 
-					Fíli and Kíli were the two most active dwarves of Thorin's company, and apart from Balin, and
-					possibly Bombur, they appeared more frequently as "individual" characters in Tolkien's novel than
-					the rest of Thorin's companions, who were most often named only in "group" references to the entire
-					company.
-				</p>
-			</div>
-
-		</div>
-		{% endblock %}
+	{% endfor %}
+	{% endblock %}
